adding photos controller tests

--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one:
+  id: 1
+  property_id: 10
+  url: http://image
 #
 two: {}
 # column: value
