--- a/test/fixtures/properties.yml
+++ b/test/fixtures/properties.yml
@@ -21,3 +21,11 @@ four:
   price: 50000000
   city: MyString
   built_type: "Apartment"
+
+five:
+  id: 3
+  user_id: 101
+
+six:
+  id: 10
+  user_id: 103
