--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -22,3 +22,9 @@ four:
   email: "admin@mail.com"
   password_digest: <%= BCrypt::Password.create('admin1234') %>
   isadmin: true
+
+five:
+  id: 103
+  email: "ejemplo3@mail.com"
+  password_digest: <%= BCrypt::Password.create('1234') %>
+  isadmin: false
