--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Which bundler?
+          gem install bundler -v 2.1.4
           command: bundle -v
       - ruby/bundle-install
 
