--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,11 @@ jobs:
     steps:
       - checkout
       - run:
-          command:
-          gem install bundler -v 2.1.4
+          name: Force Bundler Version
+          command: |
+            sudo gem update --system
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
       - ruby/bundle-install
 
