--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Force Bundler Version
-          command: |
-            sudo gem update --system
-            gem install bundler
+          name: Which bundler?
+          command: bundle -v
       - ruby/bundle-install
 
