--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           name: install dependencies
           command: |
             gem install bundler -v 2.0.1
-            bundle install          
+            bundle install
       - ruby/bundle-install
+      - run: rails test
 
