--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       - image: circleci/ruby:2.5.1
         environment:
           BUNDLER_VERSION: 2.0.1
+      - image: circleci/postgres:10.14
+        environment:
+          ALLOW_EMPTY_PASSWORD=yes
     executor: ruby/default
     steps:
       - checkout
