--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
+            sudo service postgresql-10.14 start
+            rails db:create
+            rails db:migrate
       - ruby/bundle-install
       - run: rails test
 
