--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
+            run apt-get update
             sudo apt-get install postgresql
             sudo -u postgres createuser test
             sudo -u postgres createdb lahaus_api_test
