--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,10 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
-            sudo apt-get update
-            sudo apt-get install postgresql
-            sudo -u postgres createuser test
-            sudo -u postgres createdb lahaus_api_test
+            apt-get update
+            apt-get install postgresql
+            postgres createuser test
+            postgres createdb lahaus_api_test
             rails db:create
             rails db:migrate
       - ruby/bundle-install
