--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,15 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
-            apt-get update
-            apt-get install postgresql
-            postgres createuser test
-            postgres createdb lahaus_api_test
+      - ruby/bundle-install
+      - run:
+          name: installing postgres
+          command: |
+            sudo apt-get update
+            sudo apt-get install postgresql
+            sudo postgres createuser test
+            sudo postgres createdb lahaus_api_test
             rails db:create
             rails db:migrate
-      - ruby/bundle-install
       - run: rails test
 
