--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,13 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
-      - ruby/bundle-install
       - run:
           name: installing postgres
           command: |
             sudo apt-get update
             sudo apt-get install postgresql
-            sudo postgres createuser test
-            sudo postgres createdb lahaus_api_test
+            sudo -u postgres createuser test
+            sudo -u postgres createdb lahaus_api_test
             rails db:create
             rails db:migrate
       - run: rails test
