--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,13 @@ jobs:
           command: |
             gem install bundler -v 2.0.1
             bundle install
-      - run:
-          name: installing postgres
-          command: |
-            sudo apt-get update
-            sudo apt-get install postgresql
-            sudo -u postgres createdb lahaus_api_test
-            rails db:create
-            rails db:migrate
-      - run: rails test
+      #- run:
+      #    name: installing postgres
+      #    command: |
+      #      sudo apt-get update
+      #      sudo apt-get install postgresql
+      #      sudo -u postgres createdb lahaus_api_test
+      #      rails db:create
+      #      rails db:migrate
+      #- run: rails test
 
